--- a/_sass/_variables-dark.scss
+++ b/_sass/_variables-dark.scss
@@ -16,7 +16,7 @@
     --background-card-hovered: var(--alpha-white-10);
     --background-nav: var(--background-default);
     --background-topbar: var(--colors-neutral-900);
-    --background-footer: var(--alpha-primary-10);
+    --background-footer: var(--colors-alpha-alpha-green-30);
     --background-menu: var(--background-default);
     --background-stripe: var(--colors-neutral-850);
     --background-sub-hero: var(--alpha-primary-10);
