--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -5,7 +5,7 @@
 
 .nds-footer {
     display: block;
-    background-color: var(--background-footer);
+    background: var(--background-footer);
     color: var(--text-oncolor-primary);
     padding: var(--spacing-4xl) 0;
     margin-top: auto;
